<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_grey_24dp"
        android:title="@string/home_barTitle" />

    <item
        android:id="@+id/navigation_business"
        android:icon="@drawable/ic_business_grey_24dp"
        android:title="@string/business_barTitle"/>

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report_grey_24dp"
        android:title="@string/report_barTitle" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_grey_24dp"
        android:title="@string/notification_barTitle" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_grey_24dp"
        android:title="@string/more_barTitle" />

</menu>
