<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ryutta.monkingmobile.ui.home.HomeFragment"
        android:label="@string/home_barTitle"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_business"
        android:name="com.ryutta.monkingmobile.ui.business.BusinessFragment"
        android:label="@string/business_barTitle"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.ryutta.monkingmobile.ui.report.ReportFragment"
        android:label="@string/report_barTitle"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ryutta.monkingmobile.ui.notifications.NotificationsFragment"
        android:label="@string/notification_barTitle"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.ryutta.monkingmobile.ui.notifications.NotificationsFragment"
        android:label="@string/more_barTitle"
        tools:layout="@layout/fragment_more" />
</navigation>