<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_home_loan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home_transaction_loan.HomeTransactionLoanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_loan_layerParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_loan_back"
            style="@style/TitleBar.Left"
            android:contentDescription="@string/all_backButton"
            app:layout_constraintBottom_toBottomOf="@+id/tv_loan_barTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_loan_barTitle" />

        <TextView
            android:id="@+id/tv_loan_barTitle"
            style="@style/TitleBar.Center"
            android:text="@string/all_loan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_loan_option"
            style="@style/TitleBar.Right"
            android:contentDescription="@string/all_optionButton"
            app:layout_constraintBottom_toBottomOf="@+id/tv_loan_barTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_loan_barTitle" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview_home_loan_inside"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain_loan_layerInherit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="72dp"
                android:background="@drawable/all_bg_rounded_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollview_home_loan_inside">

                <TextView
                    android:id="@+id/tv_loan_total_name"
                    style="@style/TextStyle.Normal.Small.Caps"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/transaction_totalLoan"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_loan_total_date"
                    style="@style/TextStyle.Normal.Small"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="31/10/2019" />

                <TextView
                    android:id="@+id/tv_loan_total_value"
                    style="@style/TextStyle.Medium.Small"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="42sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_loan_total_date"
                    tools:text="212,000" />

                <TextView
                    android:id="@+id/tv_loan_analysis_name"
                    style="@style/TextStyle.Normal.Small.Caps"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/transaction_analysisLoan"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_loan_total_value" />

                <View
                    android:id="@+id/view_loan_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="168dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_loan_analysis_weekly" />

                <View
                    android:id="@+id/view_loan_divider3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_loan_transaction" />

                <Button
                    android:id="@+id/btn_loan_analysis_weekly"
                    style="@style/ButtonStyle.Normal.Small"
                    android:elevation="4dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/onWeekly"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_loan_analysis_monthly"
                    app:layout_constraintTop_toBottomOf="@+id/tv_loan_analysis_name" />

                <Button
                    android:id="@+id/tv_loan_analysis_monthly"
                    style="@style/ButtonStyle.Normal.Small"
                    android:layout_height="40dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/onMonthly"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_loan_analysis_weekly" />

                <TextView
                    android:id="@+id/tv_loan_recent_name"
                    style="@style/TextStyle.Normal.Small"
                    android:layout_marginStart="24dp"
                    android:text="@string/transaction_recentLoan"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_loan_recent_date" />

                <TextView
                    android:id="@+id/tv_loan_recent_date"
                    style="@style/TextStyle.Normal.Small"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/onToday"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_loan_divider" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_loan_recent_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/transaction_searchTransaction" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view_loan_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_loan_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_loan_divider2"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_cardview_transaction" />

                <TextView
                    android:id="@+id/tv_loan_see_all"
                    style="@style/TextStyle.Normal.Small.Caps"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/transaction_seeAll"
                    android:textColor="@color/colorBlueMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_loan_transaction" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>