<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_home_debt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home_transaction_debt.HomeTransactionDebtFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_debt_layerParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_debt_back"
            style="@style/TitleBar.Left"
            android:contentDescription="@string/all_backButton"
            app:layout_constraintBottom_toBottomOf="@+id/tv_debt_barTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_debt_barTitle" />

        <TextView
            android:id="@+id/tv_debt_barTitle"
            style="@style/TitleBar.Center"
            android:text="@string/all_debt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_debt_option"
            style="@style/TitleBar.Right"
            android:contentDescription="@string/all_optionButton"
            app:layout_constraintBottom_toBottomOf="@+id/tv_debt_barTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_debt_barTitle" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview_home_debt_inside"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain_debt_layerInherit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="72dp"
                android:background="@drawable/all_bg_rounded_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_debt_barTitle">

                <TextView
                    android:id="@+id/tv_debt_total_name"
                    style="@style/TextStyle.Normal.Small.Caps"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/transaction_totalDebt"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_debt_total_date"
                    style="@style/TextStyle.Normal.Small"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    tools:text="31/10/2019"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_debt_total_value"
                    style="@style/TextStyle.Medium.Small"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="42sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_debt_total_date"
                    tools:text="212,000" />

                <TextView
                    android:id="@+id/tv_debt_analysis_debt_name"
                    style="@style/TextStyle.Normal.Small.Caps"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/transaction_analysisDebt"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_debt_total_value" />

                <Button
                    android:id="@+id/btn_debt_analysis_weekly"
                    style="@style/ButtonStyle.Normal.Small"
                    android:elevation="4dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/onWeekly"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/btn_debt_analysis_monthly"
                    app:layout_constraintTop_toBottomOf="@+id/tv_debt_analysis_debt_name" />

                <Button
                    android:id="@+id/btn_debt_analysis_monthly"
                    style="@style/ButtonStyle.Normal.Small"
                    android:layout_height="40dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/onMonthly"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_debt_analysis_weekly" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart_debt_analysis_line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="325dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_debt_analysis_weekly" />

                <View
                    android:id="@+id/view_debt_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chart_debt_analysis_line_chart" />

                <TextView
                    android:id="@+id/tv_debt_recent_debt_name"
                    style="@style/TextStyle.Normal.Small.Caps"
                    android:layout_marginStart="24dp"
                    android:text="@string/transaction_recentDebt"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_debt_recent_debt_date" />

                <TextView
                    android:id="@+id/tv_debt_recent_debt_date"
                    style="@style/TextStyle.Normal.Small.Caps"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/onToday"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_debt_divider" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_debt_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_debt_recent_debt_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/transaction_searchTransaction" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view_debt_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_debt_search" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_debt_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_debt_divider2"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_cardview_transaction" />

                <View
                    android:id="@+id/view_debt_divider3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_debt_transaction" />

                <TextView
                    android:id="@+id/tv_debt_see_all"
                    style="@style/TextStyle.Normal.Small.Caps"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/transaction_seeAll"
                    android:textColor="@color/colorBlueMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_debt_transaction" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>