<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    style="@style/Widget.MaterialComponents.CardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_target"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="24dp"
    android:layout_marginBottom="4dp"
    card_view:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_business_cv"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.5"
        card_view:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/tv_cv_profit"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/all_profit"
            android:textSize="16sp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_cv_profitPercentage"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_cv_profitPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cv_profitPercentage"
            android:textColor="@color/colorGreen"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/view_cv_defider"
            card_view:layout_constraintHorizontal_bias="0.666"
            card_view:layout_constraintStart_toEndOf="@+id/tv_cv_profit"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/tv_cv_profitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cv_profitValue"
            android:textColor="@color/colorGreen"
            android:textSize="16dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_cv_profitPercentage"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_cv_profitPercentage"
            card_view:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/view_cv_defider"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cv_cost"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/all_cost"
            android:textSize="16sp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_cv_costPercentage"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/view_cv_defider"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.02" />

        <TextView
            android:id="@+id/tv_cv_costPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cv_costPercentage"
            android:textColor="@color/colorDanger"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.666"
            card_view:layout_constraintStart_toEndOf="@+id/tv_cv_cost"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/tv_cv_costValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cv_costValue"
            android:textColor="@color/colorDanger"
            android:textSize="16dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_cv_costPercentage"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_cv_costPercentage"
            card_view:layout_constraintVertical_bias="0.741" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>